# prepro

./: .gitignore  LICENSE  README.md  pyproject.toml
src/prepro/: __init__.py  balance.py  cardinality.py  cast.py  clean_strings.py  collinearity.py  core.py  detect_types.py  drop_useless.py  duplicates.py  encode.py  extract_datetime.py  missing.py  outliers.py  polynomial.py  scale.py  skewness.py  split_dataset.py  summary.py  target_preprocess.py  variance_filter.py  workflow.py
tests/: test_cast.py  test_core.py  test_duplicate.py  test_features_2_18.py  test_split.py  test_summary.py  test_target.py  test_workflow.py
