[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prepro"
dynamic = ["version"]
description = "A preprocessing library for data science workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["preprocessing", "data-science", "data-cleaning"]
authors = [
  {name = "Kasun Vishvajith", email = "kasun@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Kasun-Vishvajith/prepro"
Issues = "https://github.com/Kasun-Vishvajith/prepro/issues"

[tool.hatch.version]
path = "src/prepro/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/prepro"]
